objects/copado__Git_Backup__c.object
<CustomObject>
    <description>A Git Snapshot record in Copado defines a connection between a Salesforce Org with a Git Repository/branch.</description>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <description>Branch of the selected Git Repository (e.g. master). Snapshots and Commits done in the Git Snapshot will affect the specified branch.</description>
        <inlineHelpText>Git branch related to the Org. Be aware that branch names are case sensitive.</inlineHelpText>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Status__c</fullName>
        <description>Status of the most recent Compliance Scan of the Branch specified in the Git Snapshot.</description>
        <inlineHelpText>Status of the most recent Compliance Scan of the Branch specified in the Git Snapshot.</inlineHelpText>
        <label>Compliance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Frequency__c</fullName>
        <description>Schedule automatic metadata backups. With the frequency set, Copado will automatically commit the metadata components of the Org into the Branch.</description>
        <inlineHelpText>Schedule automatic metadata backups. With the frequency set, Copado will automatically commit the metadata components of the Org into the Branch.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <description>Git Repository linked to the Git Snapshot. The specified Branch must exist in the Git Repository.</description>
        <inlineHelpText>Git Repository linked to the Git Snapshot. The specified Branch must exist in the Git Repository.</inlineHelpText>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Git Snapshots</relationshipLabel>
        <relationshipName>Git_Backups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Git_Snapshot_Permissions__c</fullName>
        <label>Git Snapshot Permissions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allow Snapshots &amp; Commits</fullName>
                    <default>true</default>
                    <label>Allow Snapshots &amp; Commits</label>
                </value>
                <value>
                    <fullName>Allow Snapshots Only</fullName>
                </value>
                <value>
                    <fullName>Allow Commits Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Last_Backup__c</fullName>
        <description>Date of the last Snapshot committed into the Branch.</description>
        <inlineHelpText>Date of the last Snapshot committed into the Branch.</inlineHelpText>
        <label>Last Snapshot</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Compliance_Scan_Date__c</fullName>
        <description>Date of the last Compliance Scan of the Branch specified in the Git Snapshot.</description>
        <inlineHelpText>Date of the last Compliance Scan of the Branch specified in the Git Snapshot.</inlineHelpText>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Types__c</fullName>
        <inlineHelpText>Empty means all types. Select one or more types to limit the backup only to selected items.</inlineHelpText>
        <label>Metadata Types</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Org__c</fullName>
        <description>A validated Org Credential used to retrieve the metadata that will be committed to the specified Branch in the Git Snapshot.</description>
        <inlineHelpText>A validated Org Credential used to retrieve the metadata that will be committed to the specified Branch in the Git Snapshot.</inlineHelpText>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Git Snapshots</relationshipLabel>
        <relationshipName>Git_Backups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the branch in your Git Repository.</description>
        <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(copado__Git_Repository__r.copado__Branch_Base_URL__c)), copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;), 
		IF(
			AND(NOT(ISPICKVAL(copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Git_Repository__r.copado__Branch_Base_URL__c +  copado__Branch__c,
			IF(
				CONTAINS(copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,copado__Branch__c),
				copado__Git_Repository__r.copado__Branch_Base_URL__c + copado__Branch__c
			)
		),
	&apos;&apos;), 
	copado__Branch__c
)</formula>
        <inlineHelpText>Link to the branch in your Git Repository.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <label>Git Snapshot</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Branch__c</columns>
        <columns>copado__Frequency__c</columns>
        <columns>copado__Git_Snapshot_Permissions__c</columns>
        <columns>copado__Git_Repository__c</columns>
        <columns>copado__Org__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Git Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>